--- a/index.html
+++ b/index.html
@@ -40,7 +40,25 @@
     <body>
 
         <!-- Add your site or application content here -->
-        <h1>Hallo world</h1>
+ 
+ <div id= "center">
+	<h2>Homework #1: My First HTML5 App in the Cloud </h2>
+    <video id='video'  controls preload='none' 
+      poster="img/sintel590x251.jpg">
+      <source id='mp4'
+        src="http://media.w3.org/2010/05/sintel/trailer.mp4"
+        type='video/mp4'>
+      <source id='webm'
+        src="http://media.w3.org/2010/05/sintel/trailer.webm"
+        type='video/webm'>
+      <source id='ogv'
+        src="http://media.w3.org/2010/05/sintel/trailer.ogv"
+        type='video/ogg'>
+      
+    </video>
+    <p><a target=_new href="http://www.sintel.org">© copyright Blender Foundation | www.sintel.org</a></p>
+    
+  </div>
 
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
